--- a/13.statistic.ipynb
+++ b/13.statistic.ipynb
@@ -66,7 +66,15 @@
    "metadata": {},
    "source": [
     "### Statistics is everywhere\\\n",
-    "> Incom of Pak avg (Average)\\ Highest score in PSL (MAX)\\ Fastest Bowler\\ Lowest runs\\ Female Percentage of teacher in pakistan\\ Rain forcast (Likelihood)\\ Dollar range Variance\\ Hostel male are more exepensive than female in (t_test)\\ Best from this place in terms of jokes, culture etc is ANOVA"
+    "- Incom of Pak avg (Average)\n",
+    "- Highest score in PSL (MAX)\n",
+    "- Fastest Bowler (MAX)\n",
+    "- Lowest runs (MIN)\n",
+    "- Female Percentage of teacher in pakistan (%)\n",
+    "- Rain forcast (Likelihood)\n",
+    "- Dollar range (Variance)\n",
+    "- Hostel male are more exepensive than female in (t_test)\n",
+    "- Best from this place in terms of jokes, culture etc is (ANOVA)"
    ]
   },
   {
