--- a/13.statistic.ipynb
+++ b/13.statistic.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable Types-3\n",
+    "### Variable Types-4\n",
     "#### Interval data or Variables Data\n",
     "> - Ordered and charaterized data e.g is june may grami zaida hy? 2020 ki nisbat\n",
     "\n",
@@ -340,6 +340,135 @@
     "    - e.g amount no, age, plant height\n",
     "    - \n",
     "__Chart Suggestion A thought starter from the exterme Presentation Method (Created by DR Andrew ALbela)__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notation in Statistic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Capitalization\n",
+    "In general, capital letters refer to population attributes (i.e., parameters); and lower-case letters refer to sample attributes (i.e., statistics). For example,\n",
+    "\n",
+    "- P refers to a population proportion; and p, to a sample proportion.\n",
+    "- X refers to a set of population elements; and x, to a set of sample elements.\n",
+    "- N refers to population size; and n, to sample size.\n",
+    "### Greek vs. Roman Letters\n",
+    "Like capital letters, Greek letters refer to population attributes. Their sample counterparts, however, are usually Roman letters. For example,\n",
+    "\n",
+    "- μ refers to a population mean; and x, to a sample mean.\n",
+    "- σ refers to the standard deviation of a population; and s, to the standard deviation of a sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population Parameters\n",
+    "By convention, specific symbols represent certain population parameters. For example,\n",
+    "\n",
+    "- μ refers to a population mean.\n",
+    "- σ refers to the standard deviation of a population.\n",
+    "- σ2 refers to the variance of a population.\n",
+    "- P refers to the proportion of population elements that have a particular attribute.\n",
+    "- Q refers to the proportion of population elements that do not have a particular attribute, so Q = 1 - P.\n",
+    "- ρ is the population correlation coefficient, based on all of the elements from a population.\n",
+    "- N is the number of elements in a population."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample Statistics\n",
+    "By convention, specific symbols represent certain sample statistics. For example,\n",
+    "\n",
+    "- x refers to a sample mean.\n",
+    "- s refers to the standard deviation of a sample.\n",
+    "- s2 refers to the variance of a sample.\n",
+    "- p refers to the proportion of sample elements that have a particular attribute.\n",
+    "- q refers to the proportion of sample elements that do not have a particular attribute, so q = 1 - p.\n",
+    "- r is the sample correlation coefficient, based on all of the elements from a sample.\n",
+    "- n is the number of elements in a sample.\n",
+    "  \n",
+    "### Simple Linear Regression\n",
+    "- Β0 is the intercept constant in a population regression line.\n",
+    "- Β1 is the regression coefficient (i.e., slope) in a population regression line.\n",
+    "- R2 refers to the coefficient of determination.\n",
+    "- b0 is the intercept constant in a sample regression line.\n",
+    "- b1 refers to the regression coefficient in a sample regression line (i.e., the slope).\n",
+    "- sb1 refers to the refers to the standard error of the slope of a regression line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probability\n",
+    "- P(A) refers to the probability that event A will occur.\n",
+    "- P(A|B) refers to the conditional probability that event A occurs, given that event B has occurred.\n",
+    "- P(A') refers to the probability of the complement of event A.\n",
+    "- P(A ∩ B) refers to the probability of the intersection of events A and B.\n",
+    "- P(A ∪ B) refers to the probability of the union of events A and B.\n",
+    "- E(X) refers to the expected value of random variable X.\n",
+    "- b(x; n, P) refers to binomial probability.\n",
+    "- b*(x; n, P) refers to negative binomial probability.\n",
+    "- g(x; P) refers to geometric probability.\n",
+    "- h(x; N, n, k) refers to hypergeometric probability.\n",
+    "\n",
+    "\n",
+    "### Counting\n",
+    "- n! refers to the factorial value of n.\n",
+    "- nPr refers to the number of permutations of n things taken r at a time.\n",
+    "- nCr refers to the number of combinations of n things taken r at a time.\n",
+    "  \n",
+    "### Set Theory\n",
+    "- A ∩ B refers to the intersection of events A and B.\n",
+    "- A ∪ B refers to the union of events A and B.\n",
+    "- {A, B, C} refers to the set of elements consisting of A, B, and C.\n",
+    "- {∅} refers to the null set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hypothesis Testing\n",
+    "- Ho refers to a null hypothesis.\n",
+    "- H1 or Ha refers to an alternative hypothesis.\n",
+    "- α refers to the significance level.\n",
+    "- Β refers to the probability of committing a Type II error.\n",
+    "\n",
+    "### Random Variables\n",
+    "- Z or z refers to a standardized score, also known as a z-score.\n",
+    "- zα refers to the standardized score that has a cumulative probability equal to 1 - α.\n",
+    "- tα refers to the t statistic that has a cumulative probability equal to 1 - α.\n",
+    "- fα refers to a f statistic that has a cumulative probability equal to 1 - α.\n",
+    "- fα(v1, v2) is a f statistic with a cumulative probability of 1 - α, and v1 and v2 degrees of freedom.\n",
+    "- Χ2 refers to a chi-square statistic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Special Symbols\n",
+    "Throughout the site, certain symbols have special meanings. For example,\n",
+    "\n",
+    "- Σ is the summation symbol, used to compute sums over a range of values.\n",
+    "- Σx or Σxi refers to the sum of a set of n observations. Thus, Σxi = Σx = x1 + x2 + . . . + xn.\n",
+    "- sqrt refers to the square root function. Thus, sqrt(4) = 2 and sqrt(25) = 5.\n",
+    "- Var(X) refers to the variance of the random variable X.\n",
+    "- SD(X) refers to the standard deviation of the random variable X.\n",
+    "- SE refers to the standard error of a statistic.\n",
+    "- ME refers to the margin of error.\n",
+    "- DF refers to the degrees of freedom."
    ]
   },
   {
