--- a/10.vscode_jupyter.ipynb
+++ b/10.vscode_jupyter.ipynb
@@ -136,7 +136,9 @@
      "output_type": "stream",
      "text": [
       "ERROR: Could not find a version that satisfies the requirement python (from versions: none)\n",
-      "ERROR: No matching distribution found for python\n"
+      "ERROR: No matching distribution found for python\n",
+      "WARNING: You are using pip version 22.0.4; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\DELL\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
@@ -146,11 +148,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -164,9 +163,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
